# trainer

./: Document-Ingest-Flow.md  Q&Apoints.md  chunk_by_toc_json.py  llama-metafiltering-query.py  llama-starter.py  local.notes.md  pdf_chunking.py  planning.md  pyproject.toml  rag_refactor_plan.md  toc.json  toc_extract.py
.github/: copilot-instructions.md
Data/: combine_sources.py
Data/Source/: combined_json.json  extract_table_of_contents_from_pdf.py  selling_basics_chunks.json  sellling_basics_toc.json  the_sales_process_chunks.json  the_sales_process_toc.json  trainer_source_data.json  understanding_the_buyer_chunks.json  understanding_the_buyer_toc.json
Data/lancedb_store/trainer_data.lance/_transactions/: 0-be5cd472-4b02-4cd6-80df-5f564a90325d.txn
Data/lancedb_store/trainer_data.lance/_versions/: 1.manifest
Evals/: llama-evaly.py
Ingest/: llama-ingest.py
Query/: llama-query.py  query-flow.md
storage/: index_store.json
