[project]
name = "trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.0",
    "arize-otel>=0.10.0",
    "arize-phoenix>=12.2.0",
    "arize-phoenix-otel>=0.13.1",
    "cohere>=5.18.0",
    "gcsfs>=2025.9.0",
    "glob2>=0.7",
    "lancedb>=0.25.1",
    "llama-index>=0.14.2",
    "llama-index-embeddings-cohere>=0.6.1",
    "llama-index-llms-anthropic>=0.8.6",
    "llama-index-llms-cohere>=0.6.1",
    "llama-index-storage-docstore-mongodb>=0.4.1",
    "llama-index-storage-kvstore-mongodb>=0.4.1",
    "llama-index-vector-stores-lancedb>=0.4.1",
    "llama-index-vector-stores-mongodb>=0.8.1",
    "llama-index-vector-stores-weaviate>=1.4.1",
    "logfire>=4.11.0",
    "notebook>=7.4.5",
    "openinference-instrumentation-llama-index>=4.3.5",
    "opentelemetry-exporter-otlp>=1.37.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.7",
    "pymongo>=4.15.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "weaviate-client>=4.16.10",
]
